fix(style): change letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ main {
     width: 16rem;
     margin: 1.5rem 0 0 0;
     line-height: 120%;
-    letter-spacing: 0.0125rem;
   }
 
   p {
@@ -45,7 +44,6 @@ main {
     width: 16rem;
     margin: 1rem 0 0 0;
     line-height: 120%;
-    letter-spacing: 0.0125rem;
   }
 }
 
